# AS02_TypesAndFunctions

./: Main.hs  README.md  TypesAndFunctions.cabal
